Bug 164374 - Edit comments in navigator creates new comment
Summary: Edit comments in navigator creates new comment
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Darshan Upadhyay
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Navigator Comments
  Show dependency treegraph
 
Reported: 2024-12-19 07:31 UTC by Oliver Specht (CIB)
Modified: 2025-09-18 06:07 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2024-12-19 07:31:12 UTC
In a Writer document containing comments the navigator lists the content of the comments. The context menu contains an 'Edit' entry. But instead of editing the selected comment it inserts a new comment at the same position
Seen in 25.8.0.0.
Comment 1 BogdanB 2024-12-19 08:21:05 UTC
Confirm with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a366cd34a85a21210939482d229d6d2dd9c1087c
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 m_a_riosv 2024-12-20 01:15:48 UTC
Latest version that works on the ones I have installed.
Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 BogdanB 2024-12-21 19:59:44 UTC
Darshan, can you check this bug? Thanks


author	Darshan-upadhyay1110 <darshan.upadhyay@collabora.com>	2024-06-21 09:49:56 +0530
committer	Miklos Vajna <vmiklos@collabora.com>	2024-08-29 16:41:15 +0200
commit 7241460e15af2e8aa3ba299aea27fbfeb0d147f7 (patch)
tree 196b22feb9164cbb3e6ef2595f6b1bb400a13233
parent 484cfb8c2496d9fb09af822a128f333a0f2c2d06 (diff)
Fix insert comment not working after document load.
    - In document with comments present insert comment not working document after load.
    - remove this condition for insertposIT to work for onload
    - this patch wil fix this issue

Change-Id: I6128053b23678e61548d04979e3b199678a6b708
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172587
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
Comment 4 Darshan Upadhyay 2025-01-07 08:15:07 UTC
https://gerrit.libreoffice.org/c/core/+/179823
Comment 5 Darshan Upadhyay 2025-01-07 12:50:53 UTC
https://gerrit.libreoffice.org/c/core/+/179884
Comment 6 Commit Notification 2025-01-12 10:13:43 UTC
Darshan-upadhyay1110 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/169aea06cc84bcfb012a9a50e935479b889ad976

tdf#164374 - Fix Edit comments in navigator creates new comment

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Ezinne 2025-01-13 04:32:24 UTC
Tested OK on:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 899d87a844c2aa2990df4a9268008960d8489379
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded


Selecting the Edit entry allows the user to edit the selected comment.
Comment 8 Commit Notification 2025-01-14 10:21:11 UTC
Darshan-upadhyay1110 committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/cccc907b151297ca7c62077d30007ce20ada6ba0

tdf#164374 - Fix Edit comments in navigator creates new comment

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gabor Kelemen (Collabora) 2025-01-20 15:19:13 UTC
Seems to work in a recent nightly:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e146f49704ef535c9ddd74338783e7c38390bf59
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Thanks Darshan!
Comment 10 freaky 2025-09-18 06:03:12 UTC Comment hidden (spam)