tdf#164374 - Fix Edit comments in navigator creates new comment

- Create new comment on same position for online
    - This will fix the edit comment problem described in Bug 164374

Change-Id: If0aae9ad1e59eae8c7c09c72e8d7b0df5dbb38bf
(cherry picked from commit 0cce452b93ce657e4baedb5b1574184b32e950e3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179884
Tested-by: Jenkins
Reviewed-by: vivek javiya <vivek.javiya@collabora.com>
(cherry picked from commit 169aea06cc84bcfb012a9a50e935479b889ad976)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180156
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>